Consommation API REST

--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -30,7 +30,7 @@
          would be @{/edit.html}         
          -->
 
-    <form th:action="@{/editUser/}+*{id}" th:object="${userForm}" th:method="PUT">
+    <form th:action="@{/users/edit/}+*{id}" th:object="${userForm}" th:method="PUT">
         ID:
         <input type="number" th:field="*{id}" />
         <br />
