Consommation API REST 2

--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -43,7 +43,7 @@
         HP:
         <input type="number" th:field="*{hp}" />
         <br />
-        <input type="submit" value="Create" />
+        <input type="submit" value="Edit user" />
     </form>
 
     <br />
