--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
             <div class="col">
                 <h2 th:utext="${message}">
                 ..!..</h2>
-                <a type="button" class="btn btn-success" th:href="@{/userList}">User List</a>  
+                <a type="button" class="btn btn-success" th:href="@{/users}">User List</a>  
             </div>
         </div>
     </div>
