--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -26,6 +26,8 @@
     <p th:utext="'Name : '+${user.name}">...</p>
     <p th:utext="'Type : '+${user.championType}">...</p>
     <p th:utext="'Vie : '+${user.hp}">...</p>
+    <a type="button" class="btn btn-success" th:href="@{/}">Home</a> 
+    <a type="button" class="btn btn-success" th:href="@{/users}">User List</a>  
 </body>
 
 </html>
