--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -52,8 +52,8 @@
                 ...
             </div>
         </div>
-        <a type="button" class="btn btn-success" th:href="@{/deleteUser/2}">delete User</a>
-        <a type="button" class="btn btn-success" th:href="@{/userList}">User List</a>
+        <a type="button" class="btn btn-success" th:href="@{/users/delete/2}">delete User</a>
+        <a type="button" class="btn btn-success" th:href="@{/users}">User List</a>
     </div>
 </body>
 
