--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -38,12 +38,12 @@
                 </tr>
                 <tr th:each="user : ${users}">
                     <td class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" th:id="flexRadioDefault+${user.id}">
-                        <label class="form-check-label" th:for="flexRadioDefault+${user.id}">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" th:id="flexRadioDefault+${user.name}">
+                        <label class="form-check-label" th:for="flexRadioDefault+${user.name}">
                             <span th:utext="${user.name}"></span>
                         </label>
                     </td>
-                    <td th:utext="${user.championType}">...</td>
+                    <td th:utext="${user.champion}">...</td>
                     <td th:utext="${user.hp}">...</td>
                 </tr>
             </table>
